--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,22 @@
-# Byte-compiled / optimized / DLL files
+# sphinx build directories
+_build/
+
+# dotfiles
+.*
+!.gitkeep
+!.github
+!.mailmap
+!.weblate.json
+# compiled python files
+*.py[co]
 __pycache__/
-*.py[codz]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# setup.py egg_info
+*.egg-info
+# emacs backup files
+*~
+# hg stuff
+*.orig
+status
 
 # windows installation config file
 /inphms.conf
